force-app/main/default/objects/Account/fields/Account_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Time__c</fullName>
    <description>When was the account created, not in Salesforce but in the actual system of record.</description>
    <inlineHelpText>Account created time</inlineHelpText>
    <label>Account Created Time</label>
    <type>DateTime</type>
</CustomField>