force-app/main/default/objects/Account/fields/Account_Manager_Flags_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Flags_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>Account Manager Flags Loaded Time</label>
    <type>DateTime</type>
</CustomField>