force-app/main/default/objects/Account/fields/Account_Number_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Encrypted__c</fullName>
    <description>Encrypted Account Number which should be used in all API calls. Please note that we will not be encrypting the account number in Salesforce side, this will be internally handled by User domain in PayPal.</description>
    <externalId>true</externalId>
    <inlineHelpText>Encrypted Account Number which should be used in API calls.</inlineHelpText>
    <label>Account Number Encrypted</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>