force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Account Status - Open, Locked, Closed, etc.,</description>
    <inlineHelpText>Account Status - Open, Locked, Closed, etc.,</inlineHelpText>
    <label>Account Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>