force-app/main/default/objects/Account/fields/Account_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Account_Subtype__c</fullName>
    <description>Account&apos;s subtype. Not all account types or countries has a subtype, but this field is created to handle in scenarios where it is needed.</description>
    <inlineHelpText>Account subtype - like No Balance/PayPal Cash/PayPal Cash Plus account in case of Personal</inlineHelpText>
    <label>Account Subtype</label>
    <length>128</length>
    <type>Text</type>
</CustomField>