force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Account Type - like Personal / Premier / Business in the tenant side. This could be a candidate for a picklist, but we dont need to put too many restrictions for customer data in the client side since we are not using Salesforce as a source of truth. So, let&apos;s keep it loosely coupled.</description>
    <inlineHelpText>Account Type - like Personal / Premier / Business</inlineHelpText>
    <label>Account Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>