force-app/main/default/objects/Account/fields/ActivityLog_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>ActivityLog_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>ActivityLog Loaded Time</label>
    <type>DateTime</type>
</CustomField>