force-app/main/default/objects/Account/fields/Admin_Merchant_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Admin_Merchant_Category_Code__c</fullName>
    <description>This is the merchant category code entered by the teammate based on his/her assessment which could be different than the one given by the user at the time of PayPal account registration.</description>
    <inlineHelpText>This is the merchant category code entered by the teammate based on his/her assessment which could be different than the one given by the user at the time of PayPal account registration.</inlineHelpText>
    <label>Admin Merchant Category Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>