force-app/main/default/objects/Account/fields/Average_Monthly_TPV__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_TPV__c</fullName>
    <description>Monthly TPV String</description>
    <inlineHelpText>Monthly TPV String</inlineHelpText>
    <label>Average Monthly TPV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>