force-app/main/default/objects/Account/fields/Basic_Profile_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Basic_Profile_Loaded_Time__c</fullName>
    <description>For Cache or TTL purposes.</description>
    <inlineHelpText>For Cache or TTL purposes.</inlineHelpText>
    <label>Basic Profile Loaded Time</label>
    <type>DateTime</type>
</CustomField>