force-app/main/default/objects/Account/fields/Business_Info_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Business_Info_Loaded_Time__c</fullName>
    <description>For cache TTL Purposes</description>
    <inlineHelpText>For cache TTL Purposes</inlineHelpText>
    <label>Business Info Loaded Time</label>
    <type>DateTime</type>
</CustomField>