force-app/main/default/objects/Account/fields/CIP_Status__c.field-meta.xml
<CustomField>
    <fullName>CIP_Status__c</fullName>
    <description>Customer&apos;s CIP status, basically the KYC.</description>
    <inlineHelpText>CIP status of the customer</inlineHelpText>
    <label>CIP Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>