force-app/main/default/objects/Account/fields/Compliance_Info_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Info_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>Compliance Info Loaded Time</label>
    <type>DateTime</type>
</CustomField>