force-app/main/default/objects/Account/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>ISO Country Code for the account&apos;s legal country</description>
    <inlineHelpText>ISO Country Code for the account&apos;s legal country</inlineHelpText>
    <label>Country Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>