force-app/main/default/objects/Account/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>Customer&apos;s legal country name</description>
    <inlineHelpText>Customer&apos;s legal country name</inlineHelpText>
    <label>Country Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>