force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>Segment the customer belongs to</description>
    <inlineHelpText>Segment the customer belongs to</inlineHelpText>
    <label>Customer Segment</label>
    <length>32</length>
    <type>Text</type>
</CustomField>