force-app/main/default/objects/Account/fields/Customer_Service_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Email__c</fullName>
    <description>Customer service email of the merchant</description>
    <inlineHelpText>Customer service email of the merchant</inlineHelpText>
    <label>Customer Service Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>