force-app/main/default/objects/Account/fields/Customer_Service_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Phone__c</fullName>
    <inlineHelpText>Customer service phone number of the Merchant.</inlineHelpText>
    <label>Customer Service Phone</label>
    <length>64</length>
    <type>Text</type>
</CustomField>