force-app/main/default/objects/Account/fields/Has_Secondary_Users__c.field-meta.xml
<CustomField>
    <fullName>Has_Secondary_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Secondary Users</label>
    <type>Checkbox</type>
</CustomField>