force-app/main/default/objects/Account/fields/Industry_Name__c.field-meta.xml
<CustomField>
    <fullName>Industry_Name__c</fullName>
    <description>Merchant&apos;s industry</description>
    <inlineHelpText>Merchant&apos;s industry</inlineHelpText>
    <label>Industry Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>