force-app/main/default/objects/Account/fields/Is_Unregistered__c.field-meta.xml
<CustomField>
    <fullName>Is_Unregistered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customers can use PayPal without registering for an account or do guest checkout even if they have one. This flag indicated whether the account is registered or not.</description>
    <inlineHelpText>Is this Account not registered yet?</inlineHelpText>
    <label>Is Unregistered</label>
    <type>Checkbox</type>
</CustomField>