force-app/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Customer&apos;s language</description>
    <inlineHelpText>Customer&apos;s language</inlineHelpText>
    <label>Language</label>
    <length>64</length>
    <type>Text</type>
</CustomField>