force-app/main/default/objects/Account/fields/Linked_Accounts_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Linked_Accounts_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>Linked Accounts Loaded Time</label>
    <type>DateTime</type>
</CustomField>