force-app/main/default/objects/Account/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Customer&apos;s location within the country - like City</description>
    <inlineHelpText>Customer&apos;s location within the country - like City</inlineHelpText>
    <label>Location</label>
    <length>32</length>
    <type>Text</type>
</CustomField>