force-app/main/default/objects/Account/fields/Merchant_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Category_Code__c</fullName>
    <description>MCC code of the merchant</description>
    <inlineHelpText>MCC code of the merchant</inlineHelpText>
    <label>Merchant Category Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>