force-app/main/default/objects/Account/fields/Monthly_TPV_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_TPV_Amount__c</fullName>
    <description>Merchant&apos;s monthly Total Payment Volume</description>
    <inlineHelpText>Merchant&apos;s monthly Total Payment Volume</inlineHelpText>
    <label>Monthly TPV Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>