force-app/main/default/objects/Account/fields/Monthly_TPV_Currency__c.field-meta.xml
<CustomField>
    <fullName>Monthly_TPV_Currency__c</fullName>
    <description>ISO Currency code associated with the Monthly TPV</description>
    <inlineHelpText>ISO Currency code associated with the Monthly TPV</inlineHelpText>
    <label>Monthly TPV Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>