force-app/main/default/objects/Account/fields/Monthly_TPV_Lower_Bound_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_TPV_Lower_Bound_Amount__c</fullName>
    <label>Monthly TPV Lower Bound Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>