force-app/main/default/objects/Account/fields/Monthly_TPV_Lower_Bound_Currency__c.field-meta.xml
<CustomField>
    <fullName>Monthly_TPV_Lower_Bound_Currency__c</fullName>
    <label>Monthly TPV Lower Bound Currency</label>
    <length>16</length>
    <type>Text</type>
</CustomField>