force-app/main/default/objects/Account/fields/No_of_Secondary_Users__c.field-meta.xml
<CustomField>
    <fullName>No_of_Secondary_Users__c</fullName>
    <description>Total number of secondary users associated with the business account</description>
    <inlineHelpText>Total number of secondary users associated with the business account</inlineHelpText>
    <label>No of Secondary Users</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>