force-app/main/default/objects/Account/fields/PayPal_Cases_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>PayPal_Cases_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>PayPal Cases Loaded Time</label>
    <type>DateTime</type>
</CustomField>