force-app/main/default/objects/Account/fields/Prefetch_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Prefetch_Loaded_Time__c</fullName>
    <description>This is a general bucket that indicates when the Prefetch data was last pushed to Salesforce platform. Please note that it is common to think this time will match with loaded time of all individual child objects, which could be true in certain scenarios, but there are possibilities where certain data categories will have different time than this.</description>
    <inlineHelpText>This is a general bucket that indicates when the Prefetch data was last pushed to Salesforce platform. Please note that it is common to think this time will match with loaded time of all individual child objects, which could be true in certain scenarios,</inlineHelpText>
    <label>Prefetch Loaded Time</label>
    <type>DateTime</type>
</CustomField>