force-app/main/default/objects/Account/fields/Previous_Interactions_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Previous_Interactions_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>Previous Interactions Loaded Time</label>
    <type>DateTime</type>
</CustomField>