force-app/main/default/objects/Account/fields/Product_Info_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Product_Info_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>Product Info Loaded Time</label>
    <type>DateTime</type>
</CustomField>