force-app/main/default/objects/Account/fields/Secondary_User_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Secondary_User_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>Secondary User Loaded Time</label>
    <type>DateTime</type>
</CustomField>