force-app/main/default/objects/Account/fields/ServiceLog_Notes_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>ServiceLog_Notes_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>ServiceLog Notes Loaded Time</label>
    <type>DateTime</type>
</CustomField>