force-app/main/default/objects/Account/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>Customer&apos;s timezone. This might be required to display some data like transaction log in customer&apos;s timezone rather than teammate&apos;s.</description>
    <inlineHelpText>Customer&apos;s timezone.</inlineHelpText>
    <label>Timezone</label>
    <length>128</length>
    <type>Text</type>
</CustomField>