force-app/main/default/objects/Account/fields/TransactionLog_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>TransactionLog_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>TransactionLog Loaded Time</label>
    <type>DateTime</type>
</CustomField>