force-app/main/default/objects/Account/fields/Unregistered_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Unregistered_Account_Type__c</fullName>
    <description>If the account is not registered with PayPal, this field will indicate type of the account like Guest, WAX or DCC.</description>
    <inlineHelpText>If the account is not registered with PayPal, this field will indicate type of the account like Guest, WAX or DCC.</inlineHelpText>
    <label>Unregistered Account Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>