force-app/main/default/objects/Account/fields/Wallet_Info_Loaded_Time__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Info_Loaded_Time__c</fullName>
    <description>For cache TTL purposes</description>
    <inlineHelpText>For cache TTL purposes</inlineHelpText>
    <label>Wallet Info Loaded Time</label>
    <type>DateTime</type>
</CustomField>